# intune-mcp-server

./: .gitignore  LICENSE  README.md  delete_entra_device.py  delete_intune_device.py  env.example  get_audit_logs.py  get_scripts.py  pyproject.toml  requirements.txt
intune_mcp_server/: __init__.py  __main__.py  config.py  graph_client.py  server.py
intune_mcp_server/tools/: __init__.py  app_registrations.py  apps.py  authentication.py  autopilot.py  cloud_pc.py  conditional_access.py  devices.py  entra_devices.py  entra_groups.py  entra_users.py  policies.py  reports.py  scripts.py  security.py  tenant_admin.py  users.py
